--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,46 @@ body {
     background: linear-gradient(90deg, rgba(109,242,242,1) 0%, rgba(109,242,242,1) 15%, rgba(123,197,247,1) 50%, rgba(142,132,253,1) 100%);
     margin: 0;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+}
+
+header {
+    box-sizing: border-box;
+    width: 100%;
+    padding: 10px 20px;
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    margin-left: 10%;
+}
+
+.content-wrapper {
+    flex: 1;
+    width: 100%;
+    display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    padding-bottom: 50px;
 }
 
 .content {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    width: 80%;
+    justify-content: center;
+}
+
+.login-container, .image-container {
+    margin: 0;
+}
+
+.image-container {
+    margin-right: 20px;
 }
 
 .login-container {
@@ -24,7 +55,11 @@ body {
     background-color: #FFFFFF;
     border-radius: 15px;
     padding: 20px 45px 45px  40px;
-    width: calc(310px + 47px);
+    width: 357px;
+    min-width: 357px;
+    padding-bottom: 30px;
+    margin-left: 20px;
+    box-shadow: 0 2px 15px rgba(0,0,0,.1), 0 15px 40px rgba(0,0,0,.08);
 }
 
 .login-header {
@@ -75,14 +110,50 @@ input::placeholder {
     margin: 15px auto 0px;
 }
 
-.forgot-password {
-    display: block;
-    width: fit-content;
-    margin: 20px auto 0px;
-}
-
 .login-recuerda-text {
     font-weight: bold;
+}
+
+.login-button {
+    background-color: #000000;
+    color: #FFFFFF;
+    width: 40%;
+    height: 45px;
+    font-size: 18px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+}
+
+.login-button:hover {
+    background-color: #333333;
+}
+
+.login-button:focus:active:hover {
+    outline: 2px solid #000000;
+}
+
+.restore-password-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65%;
+    height: 35px;
+    margin: 10px auto 0px;
+    padding: 0px 20px 0px;
+    border-radius: 8px;
+    font-family: 'Arial', sans-serif;
+    text-decoration: none;
+    color: #000000;
+    width: fit-content;
+}
+
+.restore-password-link:hover {
+    background-color: #E5E5E5;
+}
+
+.restore-password-link:active:hover {
+    outline: 2px solid #000000;
 }
 
 @media (max-width: 1000px) {
